mp3 player interface

--- a/src/storyTeller/Makefile
+++ b/src/storyTeller/Makefile
@@ -3,7 +3,7 @@ INCLUDE_SHMVAR=1
 include ../common/config.mk
 
 TARGET = storyTeller
-LDFLAGS := $(LDFLAGS) -lpthread -lSDL -lSDL_image -lSDL_ttf -lSDL_mixer
+LDFLAGS := $(LDFLAGS) -lpthread -lSDL -lSDL_image -lSDL_ttf -lSDL_mixer -lSDL_rotozoom
 
 include ../common/commands.mk
 include ../common/recipes.mk
