Charging state SDL2

--- a/src/chargingState/Makefile
+++ b/src/chargingState/Makefile
@@ -2,7 +2,7 @@ INCLUDE_CJSON=1
 include ../common/config.mk
 
 TARGET = chargingState
-LDFLAGS := $(LDFLAGS) -lSDL -lSDL_image -lSDL_ttf
+LDFLAGS := $(LDFLAGS) -lSDL2 -lSDL2_image
 
 include ../common/commands.mk
 include ../common/recipes.mk
